Improved pipelines and more (#964)
* Improved pipelines and more

- Maven cache
- Build cache
- CLI native build (with smoke test)
- helidon-cli.zip artifact that contains ALL platforms
- Advanced parallelism (javadoc and spotbugs)
- Split and parallelized tests
- Run tests on both Linux and Windows

Misc:
- Use OracleJDK
- Fixed issues in CLI functional tests
- Fixed Windows issues in LSP
- Fixed Spotbugs errors in LSP
- Moved LSP in the default reactor
- Use new copyright plugin (chickend-and-egg, so use 3.0.5)
- Updated all copyright headers that did not pass the check
- Use build-cache-maven-plugin for fast-forwarded builds (chickend-and-egg, so use 3.0.5)
- Updated etc/scripts/shellcheck.sh to work locally
- Removed most scripts, leave only shellcheck.sh copyright.sh checkstyle.sh and release.sh
- Removed Jenkinsfile
- Removed usage of parentdir plugin, replaced it with ${maven.multiModuleProjectDirectory}
  (requires a .mvn top-level folder and mvn >= 3.6.0 ish)

* Rename workflow to Validate to align with Helidon

* Improve matrix.sh to avoid requiring the misc group explicitly